8.3. Конвертация ArrayList в двухмерный массив [#10035]